crates/vexor-compiler/tests/golden/error/output/keyword_as_ident.err
Error: parse error
   ╭─[ input:2:5 ]
   │
 2 │ val match = 100
   │     ┬  
   │     ╰── expected non-keyword identifier
───╯
